# voice_agent_be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: docker-image.yml  smoke.yml
app/: auth.py  config.py  dispatch.py  errors.py  main.py  ratelimit.py
app/api/: __init__.py  voice.py
app/context/: __init__.py  grounding.py  loader.py
app/observability/: __init__.py  counters.py  logging.py  metrics.py  pii.py  (+1 more)
docs/: api.md  architecture.md  configuration.md  telephony.md
evaluation/: README.md  __init__.py  __main__.py  dataset.py  grounding.py  harness.py  runners.py  seed_set.json
frontend/: README.md  app.js  index.html  styles.css
scripts/: __init__.py  smoke.py
tests/: README.md  test_alt_realtime.py  test_app.py  test_appointment.py  test_auth.py  test_barge_in.py  test_cartesia_tts.py  test_config.py  test_context.py  test_contract_api.py  test_cors.py  test_counters.py  test_deepgram_stt.py  test_dispatch.py  test_elevenlabs_stt.py  test_elevenlabs_tts.py  test_endpoint_contracts.py  test_errors.py  test_eval_harness.py  test_fallback.py  test_frontend.py  test_gemini_llm.py  test_groq_llm.py  test_grounding.py  test_grounding_eval.py  test_healthz.py  test_integration_turns.py  test_logging.py  test_memory.py  test_metrics.py  test_openai_realtime.py  test_openapi_docs.py  test_pii_logging.py  test_providers.py  test_ratelimit.py  test_realtime_pipeline.py  test_scaffold.py  test_session.py  test_smoke_script.py  test_state.py  (+9 more)
(+36 files in other folders)
