[project]
name = "voice-ai-agent"
version = "0.1.0"
description = "Dual-pipeline voice assistant (traditional STT→LLM→TTS + realtime voice-to-voice)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
