[project]
name = "voice-ai-agent"
version = "0.1.0"
description = "Dual-pipeline voice assistant (traditional STT→LLM→TTS + realtime voice-to-voice)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Coverage for the unit suite (VA-62): `pytest --cov=app --cov-report=term-missing`.
[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
